Guardar usuarios autenticados en la BD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">UELoginExample</string>
     <string name="title_home">Inicio</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Usuarios</string>
+    <string name="title_dashboard">Huella</string>
+    <string name="title_notifications">Autenticaciones</string>
 
     <string name="com_auth0_client_id">MaBYuCNDs8BiqZi0deTNuWa2r5BIj9za</string>
     <string name="com_auth0_domain">sixel.auth0.com</string>
