--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
 
     <string name="com_auth0_client_id">MaBYuCNDs8BiqZi0deTNuWa2r5BIj9za</string>
     <string name="com_auth0_domain">sixel.auth0.com</string>
+
+    <string name="imgPrincipal"></string>
+    <string name="imgSecundaria"></string>
+    <string name="tvBienvenido">Bienvenido</string>
 </resources>
